# sneeze

./: .gitignore  .roborev.toml  AGENTS.md  COMMAND-MAP.md  LICENSE  README.md  ROBOREV-PLAYBOOK.md  environment-ft.yml  environment.yml  pyproject.toml
agents/: PLUGINS.md
scripts/: roborev-matrix-review.sh  sneeze-env-create.sh  sneeze-env-update.sh
src/sneeze/: __init__.py  cli.py  command.py  commandinvariant.py  commands.py  config.py  console.py  console_commands.py  invariant.py  invariantcommand.py  mcp_commands.py  mcp_server.py  path.py  plugin.py  runlog.py  slackbot.py  slackbot_commands.py  tmux_dev.py  util.py  xdg.py
src/sneeze/console_static/: console.css  console.js  index.html
tests/: conftest.py  test_cli.py  test_config.py  test_console.py  test_mcp_server.py  test_plugin.py  test_run_history_command.py  test_runlog.py  test_slackbot.py
