[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sneeze"
version = "0.1"
description = "Plugin-oriented command tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Trent Nelson" },
]
dependencies = []

[project.optional-dependencies]
slackbot = [
  "slack-sdk>=3.30",
]
mcp = [
  "mcp>=1.27",
  "starlette>=0.37",
  "uvicorn>=0.30",
]
dev = [
  "black>=26.3.1",
  "mcp>=1.27",
  "mypy",
  "pytest",
  "ruff>=0.15.12",
  "starlette>=0.37",
  "uvicorn>=0.30",
]

[project.scripts]
sne = "sneeze.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sneeze = [
  "console_static/*.css",
  "console_static/*.html",
  "console_static/*.js",
  "console_static/vendor/xterm/*",
]

[tool.black]
line-length = 78
target-version = ["py312"]
include = "src/sneeze/.*\\.pyi?$|tests/.*\\.pyi?$"

[tool.ruff]
line-length = 78
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.pycodestyle]
max-line-length = 78

[tool.mypy]
install_types = true
non_interactive = true
